# rules_typst

./: .gitattributes  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  typst.bzl
.bcr/: config.yml  metadata.template.json
.github/workflows/: ci.yaml  release.yml  release_prep.sh
docs/: BUILD.bazel
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
examples/: MODULE.bazel  WORKSPACE.bazel
examples/simple/: BUILD.bazel  simple.typ
typst/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
typst/private/: BUILD.bazel  BUILD.tpl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
typst/tests/: versions_test.bzl
