"""jonsch318/rules_typst"""

module(
    name = "rules_typst",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")

bazel_dep(name = "gazelle", version = "0.35.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

typst = use_extension("//typst:extensions.bzl", "typst")
typst.toolchain(typst_version = "0.11.0-rc1")
use_repo(typst, "typst_toolchains")

register_toolchains("@typst_toolchains//:all")
