# Override http_archive for local testing
local_repository(
    name = "rules_typst",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_typst setup #
######################
# Fetches the rules_typst dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_typst//typst:repositories.bzl", "rules_typst_dependencies")

rules_typst_dependencies()
